welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: type mismatch;
 found   : Int(0)
 required: Boolean
var vuBiscuit : Boolean = 0;
                          ^Program:4: error: Boolean does not take parameters
while(vuBiscuit() == false) {
               ^Program:8: error: type mismatch;
 found   : Int(1)
 required: Boolean
			vuBiscuit = 1;
                                    ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
while(vuBiscuit() == false) {
^