welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var vuBiscuit : Boolean = 0;
while(vuBiscuit() == false) {
	for (compteur1 <- 1 to 7) {
		avance();
		if (estSurBiscuit() == true) {
			vuBiscuit = 1;
	}	
	}
}
}
